1-system/2-kube-prometheus-stack/grafana.virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-virtual-service
spec:
  gateways:
    - istio-system/ezaf-gateway
  hosts:
    - grafana.ingress.pcai0201.fr2.hpecolo.net
  http:
    - match:
        - uri:
            prefix: /
      rewrite:
        uri: /
      route:
        - destination:
            host: kube-prometheus-stack-grafana.unique.svc.cluster.local
            port:
              number: 80
